# ml4mat-26s-public

./: LICENSE  README.md  pyproject.toml
homeworks/hw2/data/: README.md  compositions.csv  properties.csv
lectures/: README.md
lectures/01-DataScience/: 01-PeriodicTable.ipynb  02-BestPractices.ipynb  03-Quantitative.ipynb
lectures/01-DataScience/data/: ir-ethanol.csv
lectures/02-Datasets/: 01-Lab.ipynb  02-Solutions.ipynb
lectures/03-Features/: 01-Solubility.ipynb
lectures/04-Unsupervised/: 02-Clustering-Lab.ipynb
lectures/04-Unsupervised/data/: .gitignore  GAP20-reduced.xyz  perovskites.csv  pvsk-clean.csv
lectures/05-BasicLearning/: 01-Classification-Logistic.ipynb  02-Classification-KNN.ipynb  03-Regression.ipynb
lectures/05-BasicLearning/data/: GAP20-env.xyz  ptable.csv
lectures/06-Kernels/: 01-Classification-Lab.ipynb
lectures/07-Optimization/: 01-Optimization.ipynb
lectures/08-NeuralNetworks/: 01-ParameterOptimization.ipynb  02-NNs.ipynb
lectures/08-NeuralNetworks/data/: superconductivity2018.csv
lectures/11-CNNs/: 01-Embeddings-Lab.ipynb
lectures/12-CNNs/: 02-FineTune-Lab.ipynb  download.sh
lectures/12-RNNs/: 02-BERT.ipynb
lectures/12-RNNs/data/: aunp-data-classification.csv
ml4mat_ucla/: __init__.py  cmap.py  utils.py
ml4mat_ucla/styles/: colab.mplstyle  jupyter.mplstyle
